--- a/frontend/404.html
+++ b/frontend/404.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not Found</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <h1>404 Not Found!</h1>
-    <p>Click <span>here</span> to back on main page</p>
+    <p>Click <span class="link" onclick="window.location.href='/'">here</span> to back on main page</p>
 </body>
 </html>
